# Fast-Perching_with_CPP

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  REFACTOR_SUMMARY.md
examples/: basic_example.cpp  precision_test.cpp
include/: lbfgs_raw.hpp  minco.hpp  poly_traj_utils.hpp  root_finder.hpp  simple_trajopt.h  traj_opt.h
scripts/: trajectory_summary.py  visualize_trajectories.py
src/: traj_opt_perching.cc
